[package]
name = "luwak"
version = "0.1.0"
authors = ["Luwak Author"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mayarid/luwak"
description = "Secure js runtime powered by deno and cofee"

[features]
# "fake" feature that allows to generate docs on docs.rs
docsrs = []

[lib]
name = "luwaklib"
path = "lib.rs"

[[bin]]
name = "luwak"
path = "luwak.rs"

[build-dependencies]
deno_broadcast_channel = { version = "0.60.0" }
deno_console = { version = "0.66.0" }
deno_core = { version = "0.148.0" }
deno_crypto = { version = "0.80.0" }
deno_fetch = { version = "0.89.0" }
deno_ffi = { version = "0.53.0", path = "./ext/ffi" }
deno_flash = { version = "0.2.0" }
deno_http = { version = "0.60.0" }
deno_net = { version = "0.58.0" }
deno_node = { version = "0.3.0" }
deno_tls = { version = "0.53.0" }
deno_url = { version = "0.66.0" }
deno_web = { version = "0.97.0" }
deno_webgpu = { version = "0.67.0" }
deno_webidl = { version = "0.66.0"}
deno_websocket = { version = "0.71.0" }
deno_webstorage = { version = "0.61.0" }
deno_ast = { version = "0.18.1", features = ["transpiling"] }

lzzzz = '1.0'

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"

[dependencies]
deno_broadcast_channel = { version = "0.60.0"}
deno_console = { version = "0.66.0" }
deno_core = { version = "0.148.0" }
deno_crypto = { version = "0.80.0"}
deno_fetch = { version = "0.89.0"}
deno_ffi = { version = "0.53.0", path = "./ext/ffi" }
deno_flash = { version = "0.2.0"}
deno_http = { version = "0.60.0"}
deno_net = { version = "0.58.0"}
deno_node = { version = "0.3.0"}
deno_tls = { version = "0.53.0"}
deno_url = { version = "0.66.0"}
deno_web = { version = "0.97.0"}
deno_webgpu = { version = "0.67.0"}
deno_webidl = { version = "0.66.0"}
deno_websocket = { version = "0.71.0"}
deno_webstorage = { version = "0.61.0"}
deno_ast = { version = "0.18.1", features = ["transpiling"] }

atty = "0.2.14"
dlopen = "0.1.8"
encoding_rs = "0.8.31"
filetime = "0.2.16"
fs3 = "0.5.0"
http = "0.2.6"
hyper = { version = "0.14.18", features = ["server", "stream", "http1", "http2", "runtime"] }
libc = "0.2.126"
log = "0.4.16"
lzzzz = '1.0'
netif = "0.1.3"
notify = "=5.0.0-pre.15"
once_cell = "1.10.0"
regex = "1.6.0"
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook-registry = "1.4.0"
sys-info = "0.9.1"
termcolor = "1.1.3"
tokio = { version = "1.19", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }
data-url = "0.1.1"
reqwest = "0.11.8"
reqwest-middleware = "0.1.6"
http-cache-reqwest = "0.5.0"
async-trait = "0.1.57"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"
winapi = { version = "0.3.9", features = ["commapi", "knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[target.'cfg(unix)'.dependencies]
nix = "=0.24.2"

[dev-dependencies]
# Used in benchmark
test_util = { path = "./test_util" }

[package.metadata.docs.rs]
features = ["docsrs"]
