[package]
name = "test_util"
version = "0.1.0"
authors = ["anak10thn <anak10thn@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mayarid/luwak"

[[bin]]
name = "test_server"
path = "src/test_server.rs"

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
base64 = "=0.13.1"
bytes = "1.4.0"
console_static_text = "=0.8.1"
fastwebsockets = { version = "=0.4.4", features = ["upgrade"] }
flate2 = { version = "1.0.26", features = ["zlib-ng"], default-features = false }
futures = "0.3.21"
glob = "0.3.1"
h2 = "0.3.17"
hyper = { version = "0.14.26", features = ["server", "http1", "http2", "runtime"] }
lazy-regex = "3"
libc = "0.2.126"
lsp-types = "=0.94.1"
monch = "=0.4.3"
nix = "=0.26.2"
once_cell = "1.17.1"
os_pipe = "=1.1.4"
parking_lot = "0.12.0"
pretty_assertions = "=1.4.0"
prost = "0.11"
regex = "^1.7.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] }
ring = "=0.16.20"
rustls-pemfile = "1.0.0"
semver = "=1.0.14"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
tar = "=0.4.40"
tempfile = "3.4.0"
termcolor = "1.1.3"
tokio = { version = "1.28.1", features = ["full"] }
tokio-rustls = "0.24.0"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "=0.3.9", features = ["consoleapi", "synchapi", "handleapi", "namedpipeapi", "winbase", "winerror"] }

[build-dependencies]
prost-build = "0.11"
